--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,5 +9,88 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require jquery.mobile
  *= require_tree .
  */
+
+body {
+  font-family: Arial;
+}
+
+ul {
+  list-style-type:none;
+  margin: 0;
+  padding: 0;
+}
+
+textarea {
+  width: 100%;
+  height: 7em;
+}
+
+h2 {
+  margin: 10px 0 5px;
+}
+
+h3 {
+  margin-bottom: 5px;
+}
+
+#container {
+  margin: 5px 10px;
+  background: url("http://londonamateurbrewers.co.uk/wp-content/themes/lonbrew-wp/assets/img/hop.png") no-repeat fixed center bottom transparent;
+}
+
+#container textarea {
+  width: 100%;
+  height: 7em;
+}
+
+#header {
+  background: url("http://londonamateurbrewers.co.uk/wp-content/themes/lonbrew-wp/assets/img/banner.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+  border-bottom: medium solid;
+  height: 125px;
+}
+
+#header h1 {
+  text-indent: -9999px;
+}
+
+#totalscore {
+  color: #FFFFFF;
+  float: right;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 10px;
+  margin: 0 5px;
+  padding: 5px;
+  text-shadow: none;
+}
+
+#actions {
+  padding-top: 40px;
+}
+
+#savedmessage {
+  background-color: #8ef13c;
+  text-shadow: none;
+  padding: 2px;
+  text-align: center;
+}
+
+#errormessage {
+  background-color: #f60018;
+  text-shadow: none;
+  padding: 2px;
+  color: #fff;
+  text-align: center;
+}
+
+.title {
+  color: #4596CE;
+  margin-right:2px;
+}
+
+.slidercontainer {
+}
+
