--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div data-role="page">
+  <div id="container">
+    <div id="header">
+      <h1>London Amateur Brewers</h1>
+    </div>
 
 <%= yield %>
 
+  </div>
+</div>
 </body>
 </html>
