Basic mobile app skeleton.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,20 +2,14 @@
 <html>
 <head>
   <title>Scorecard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div data-role="page">
-  <div id="container">
-    <div id="header">
-      <h1>London Amateur Brewers</h1>
-    </div>
 
 <%= yield %>
 
-  </div>
-</div>
 </body>
 </html>
