--- a/app/views/welcome/_header.html.erb
+++ b/app/views/welcome/_header.html.erb
@@ -1,1 +1,9 @@
-<div id="header"><h1>London Amateur Brewers</h1></div>
+<% link_to_home ||= false %>
+
+<div data-role="header">
+  <% if link_to_home %>
+    <a href="#home" data-icon="arrow-l" data-iconpos="left" data-inline="true">Home</a>
+  <% end %>
+
+  <h1>LAB Score Cards</h1>
+</div>
